# parallel-eds-search

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: color_print.cmake
data/: chr1.eds  pattern8.txt  result8.txt  results16.txt  results8.txt
src/: CMakeLists.txt  ElasticDegenerateString.cc  ElasticDegenerateString.h  Matcher.cc  Matcher.h  SSEMatcher.cpp  SSEMatcher.h  SopangMatcher.cc  SopangMatcher.h  Util.cc  Util.h  eds-cli.cc
test/: CMakeLists.txt  MatcherTests.cc
